<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context="com.summertime.survey.fragments.YesNoInfoFragment">

    <TextView
        android:id="@+id/question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginTop="20dip"
        android:padding="5dip"
        android:text="@string/selfieQuestion" />

    <include layout="@layout/radio_layout" />


    <TextView
        android:id="@+id/question2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginTop="20dip"
        android:padding="5dip"
        android:text="@string/travelQuestion" />

    <include layout="@layout/radio_layout" />

    <TextView
        android:id="@+id/question3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginTop="20dip"
        android:padding="5dip"
        android:text="@string/sportsQuestion" />

    <include layout="@layout/radio_layout" />


    <TextView
        android:id="@+id/question4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginTop="20dip"
        android:padding="5dip"
        android:text="@string/natureQuestion" />

    <include layout="@layout/radio_layout" />

</LinearLayout>
