<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    tools:context="com.summertime.survey.fragments.OpportunityFragment">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="15dip"
        android:textColor="@android:color/black"
        android:padding="5dip"
        android:text="@string/question" />

    <TextView
        android:id="@+id/question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dip"
        android:padding="5dip"
        android:text="@string/partyQuestion" />

    <include layout="@layout/radio_layout"
        android:id="@+id/layout1"/>


    <TextView
        android:id="@+id/question2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="20dip"
        android:textColor="@android:color/black"
        android:padding="5dip"
        android:text="@string/familyQuestion" />

    <include layout="@layout/radio_layout"
        android:id="@+id/layout2"/>

</LinearLayout>
