<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.summertime.survey.fragments.FavActivitiesFragment">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="25dip"
        android:layout_marginTop="15dip"
        android:padding="5dip"
        android:text="@string/favactivitiesQues" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dip"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/moviewQues"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@android:color/black"/>

        <Spinner
            android:id="@+id/movies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:entries="@array/movies_freq"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dip"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/eatingout"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@android:color/black"/>

        <Spinner
            android:id="@+id/eating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:entries="@array/eating_freq"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dip"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/party"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@android:color/black"/>

        <Spinner
            android:id="@+id/party"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:entries="@array/party_freq"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dip"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/vacation"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@android:color/black"/>

        <Spinner
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:entries="@array/vacation_freq"
            android:layout_weight="1"
            />

    </LinearLayout>

</LinearLayout>
